--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
-  text-align: center;
+div {
+  height: 500px;
+  width: 500px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.rebecca-purple {
+  background-color: rebeccapurple;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.cadet-blue {
+  background-color: cadetblue;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.dark-goldenrod {
+  background-color: darkgoldenrod;
 }
 
-.App-link {
-  color: #61dafb;
+.pinstripe-blue {
+  background-color: blue;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.hotpink {
+  background-color: hotpink;
+}
+
+.dark-green {
+  background-color: darkgreen;
+}
+
+.ghost-white {
+  background-color: ghostwhite;
+}
+
+.banana-yellow {
+  background-color: yellow;
 }
